--- a/Part2/stage3/Ex3_exer/류경민.Rmd
+++ b/Part2/stage3/Ex3_exer/류경민.Rmd
@@ -1,3 +1,11 @@
+---
+title: "류경민"
+output: html_document
+---
+### 연습문제 3문제를 풀면서 감각을 익혀보자!!
+
+## 포함된 라이브러리 입니다.
+```{r }
 library(readxl)
 library(stringr)
 library(KoNLP)
@@ -8,9 +16,12 @@ windowsFonts()
 windowsFonts(malgun = "맑은 고딕")
 library(RColorBrewer)
 theme_update(text = element_text(family = "malgun"))
+```
+
+## 3-3 취직하기 어렵네요 : 실업률 그래프 입니다.
 
 
-###### 3-3 #######3
+```{r}
 data1 <- read.csv("data/2000-2013년 연령별실업율_15-19세.csv",header=T)
 data2 <- read.csv("data/2000-2013년 연령별실업율_20-29세.csv",header=T)
 data3 <- read.csv("data/2000-2013년 연령별실업율_30-39세.csv",header=T)
@@ -79,7 +90,7 @@ mm5
 mm7 <- melt(mm5, id=c('년도'))
 mm7
 
-count1 <- ggplot(mm7, aes(x=년도, y=value, group=variable, fill=variable,color=variable,shape=variable)) +
+count1 <- ggplot(mm7, aes(x=년도, y=value, group= variable,fill=variable,color=variable,shape=variable)) +
   geom_line(size=1) +
   geom_point(size=3) +
   theme_bw(base_family="malgun", base_size = 8) +
@@ -94,11 +105,19 @@ count1 <- ggplot(mm7, aes(x=년도, y=value, group=variable, fill=variable,color
 count1
 ggplotly(count1)
 
+```
 
-############# 3-5 ############
-options(digits = 1)
-data01 <- read.csv("data/버스노선별이용현황합계.csv",header=T)
-View(data)
+# 학원에서 풀 당시에는 자료가 이어지질 않아서 그냥 제출하려고 했는데 group을 추가해 봄으로써 자료가 이어졌습니다.
+# 그러나 이 자료를 전처리하는데 어려움이 많이 있었고, 일단은 풀어야겠다는 생각에 무식한 방법을 사용하였습니다.
+# 전처리를 하는 방법에 대해서 여러각도를 제시해 주셨으면 합니다. array를 적용하기가 아직은 좀 어렵습니다. 
+
+
+
+
+## 3-6 콩나물 마을 버스 찾아달래요. : 버스 이용노선 바 그래프 입니다. 
+
+```{r}
+data01 <- read.csv("data/버스노선별이용현황합계.csv")
 
 df01 <- melt(data01,id.vars = 1)
 df01
@@ -113,10 +132,23 @@ ggplot(df01,aes(x=노선번호,y=인원/1000,fill=기준)) +
                                   size = 15, color = "darkblue")) +
   coord_cartesian(xlim = c(1,25), ylim = c(1,300))
 
+```
+
+# 코드를 작동하는데 걸린 시간보다 이 그래프를 꾸미는데 시간이 더 오래 걸렸습니다. 그 와중에 더 배운게 많은
+# 것 같습니다. 
 
 
-######### 3-7 ################
 
+
+
+
+
+
+
+
+
+## 3-7 마포 9번 마을버스 이용 현황 분석 : 버스 이용 라인그래프 입니다. 
+```{r}
 data001 <- read.csv("data/마포09번이용현황.csv")
 data001
 
@@ -134,4 +166,8 @@ ggplot(df001,aes(x=정류소명,y=인원,group=기준,fill=기준,color=기준))
   theme(plot.title = element_text(face = "bold", hjust = 0.5, 
                                   size = 15, color = "darkblue"))
   
-  
+```
+
+# 이 예제를 풀면서 group에 대해 알게 되어 요긴하게 적용하였습니다. 그러나 책에서와 같이 데이터의 순서대로가 아닌
+# 가나다라 순의 그래프 인지라 조금 다르게 작성되었습니다. 이 문제에 대해서는 이 후에 조금더 공부해 보겠습니다. 
+# 수업시간에 이야기 해 주셔도 좋을것 같습니다. 감사합니다.
